--- a/IMAGE_MAP/imageTest.html
+++ b/IMAGE_MAP/imageTest.html
@@ -18,9 +18,9 @@
             padding-top: 100px;
         }
 
-        .customa {
+        /*.customa {
             border: 1px solid red;
-        }
+        }*/
 
         #lightTrigger {
             padding: 5px 10px;
